# RockPaperScissor

./: .gitignore  CHANGELOG.md  RockPaperScissor.cabal  readme.md
app/: Main.hs
